--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
 			[<a href="https://github.com/qianlin04/safe-offline-rl-with-diffusion-model">Code</a>]
 			</p></td></tr>
 		</tbody>
+        
+        <!-- sim2real_survey -->
+		<tbody><tr>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b><font size="4.5">Sim-to-real Transfer Reinforcement Learning in Robot Systems: A Survey</font></b><br>
+					<strong>Qian Lin</strong>, Yu Chao, Wu XiaWei, Dong YinZhao, XuXin, ZhangQiang, Guo Xian<br>
+				<em>(written in Chinese), Journal of Software, China </em>.<br>
+			[<a href="https://www.jos.org.cn/jos/article/pdf/7006">Paper</a>]&nbsp;
+			</p></td></tr>
+		</tbody>
 
 	</table>
 
