--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<b><font size="4.5">Sim-to-real Transfer Reinforcement Learning in Robot Systems: A Survey</font></b><br>
 					<strong>Qian Lin</strong>, Yu Chao, Wu XiaWei, Dong YinZhao, XuXin, ZhangQiang, Guo Xian<br>
 				<em>(written in Chinese), Journal of Software, China </em>.<br>
-			[<a href="https://www.jos.org.cn/jos/article/pdf/7006">Paper</a>]&nbsp;
+			[<a href="https://www.jos.org.cn/jos/article/pdf/7006">Paper</a>]
 			</p></td></tr>
 		</tbody>
 
