--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<meta content="en-us" http-equiv="Content-Language">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	<title>Qian Lin - UofT</title>
+	<title>Qian Lin</title>
 	<meta charset="utf-8">
 	
 	<style type="text/css">
