--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<meta content="en-us" http-equiv="Content-Language">
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	<title>Qian Lin</title>
+	<title>Qian Lin - UofT</title>
 	<meta charset="utf-8">
 	
 	<style type="text/css">
@@ -61,8 +61,12 @@
 			<tr>
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">			
-				I am a second-year Master's student in Sun Yat-sen University, China, supervised by Professor Chao Yu. I mainly focus on reinforcement learning (RL), especially offline RL and its application under different problem settings and in various real-world scenarios.
-				Prior to that, I received my Bachelor's degree in computer science from the same university.
+				I am a second-year Master's student in Sun Yat-sen University, China, supervised by Professor Chao Yu. 
+				I mainly focus on reinforcement learning (RL), especially under various settings, including offline, safe, and multi-objective scenarios. 
+				I hope to advance the real-world applications of RL by enhancing agents'generalization across diverse tasks and environments, while prioritizing their safety and robustness.
+				Prior to that, I received my Bachelor's degree in computer science from the same university. 
+				<br><br>
+				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.				
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
 				</td>
 			</tr>
