--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
 	<p><b><font face="Times New Roman" size="5"><br>
 		Publications
 	</font></b></p>
-	* indicates equal contribution
+	
 
 	<table width="1000">
+	
 		<!--CAL-->
 		<tbody><tr>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
@@ -87,6 +88,7 @@
 				<em>ICLR 2024</em>.<br>
 				[<a href="https://arxiv.org/pdf/2401.14758.pdf">Paper</a>]&nbsp;
 				[<a href="https://github.com/ZifanWu/CAL">Code</a>]
+				<br><br>
 			</p></td></tr>
 		</tbody>
 
@@ -98,6 +100,7 @@
 				<em>AAMAS 2024</em>.<br>
 			[<a href="https://arxiv.org/abs/2401.02244">Paper</a>]&nbsp;
 			[<a href="https://github.com/qianlin04/PRMORL">Code</a>]
+			<br><br>
 			</p></td></tr>
 		</tbody>
 
@@ -109,8 +112,48 @@
 				<em>ICML 2023</em>.<br>
 			[<a href="https://proceedings.mlr.press/v202/lin23h/lin23h.pdf">Paper</a>]&nbsp;
 			[<a href="https://github.com/qianlin04/safe-offline-rl-with-diffusion-model">Code</a>]
+			<br><br>
 			</p></td></tr>
 		</tbody>
+        
+        <!-- sim2real_survey -->
+		<!--
+		<tbody><tr>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b><font size="4.5">Sim-to-real Transfer Reinforcement Learning in Robot Systems: A Survey</font></b><br>
+					<strong>Qian Lin</strong>, Yu Chao, Wu XiaWei, Dong YinZhao, XuXin, ZhangQiang, Guo Xian<br>
+				<em>(written in Chinese), Journal of Software, China </em>.<br>
+			[<a href="https://www.jos.org.cn/jos/article/pdf/7006">Paper</a>]
+			</p></td></tr>
+		</tbody> -->
+	* indicates equal contribution
+	</table>
+	
+	
+	<p><b><font face="Times New Roman" size="5"><br>
+		Under Review
+	</font></b></p>
+	
+	<table width="1000">
+	
+		<!--PODA-->
+		<tbody><tr>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b><font size="4.5">An Offline Adaptation Framework for Constrained Multi-Objective Reinforcement Learning</font></b><br>
+					<strong>Qian Lin</strong>, Zongkai Liu, Danying Mo, Chao Yu<br>
+					<br>
+			</p></td></tr>
+		</tbody>
+
+		<!--bid-->
+		<tbody><tr>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b><font size="4.5">Hierarchical Multi-agent Meta-Reinforcement Learning for Cross-channel Bidding</font></b><br>
+					Shenghong He, Chao Yu, <strong>Qian Lin</strong>, Shangqin Mao, Bo Tang, Qianlong Xie, Xingxing Wang<br>
+				<br>
+			</p></td></tr>
+		</tbody>
+
 	</table>
 
 	<p><b><font face="Times New Roman" size="5"><br>
@@ -146,6 +189,6 @@
 	<br>
 
 	<hr>
-	<font style="font-size:10">Qian Lin <i>Last updated: Mar.1, 2024</i></font>
+	<font style="font-size:10">Qian Lin <i>Last updated: Dec.17, 2023</i></font>
 
 </div></body>
