--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
 		</tbody>
         
         <!-- sim2real_survey -->
-		<!--
 		<tbody><tr>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b><font size="4.5">Sim-to-real Transfer Reinforcement Learning in Robot Systems: A Survey</font></b><br>
@@ -125,7 +124,7 @@
 				<em>(written in Chinese), Journal of Software, China </em>.<br>
 			[<a href="https://www.jos.org.cn/jos/article/pdf/7006">Paper</a>]
 			</p></td></tr>
-		</tbody> -->
+		</tbody> 
 	</table>
 	
 	* indicates equal contribution
