--- a/index.html
+++ b/index.html
@@ -117,21 +117,19 @@
 		</tbody>
         
         <!-- sim2real_survey -->
+		<!--
 		<tbody><tr>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b><font size="4.5">Sim-to-real Transfer Reinforcement Learning in Robot Systems: A Survey</font></b><br>
 					<strong>Qian Lin</strong>, Yu Chao, Wu XiaWei, Dong YinZhao, XuXin, ZhangQiang, Guo Xian<br>
 				<em>(written in Chinese), Journal of Software, China </em>.<br>
 			[<a href="https://www.jos.org.cn/jos/article/pdf/7006">Paper</a>]
-			<br><br>
 			</p></td></tr>
-		</tbody> 
+		</tbody> -->
 	</table>
 	
-	* indicates equal contribution
-	
 	<p><b><font face="Times New Roman" size="5"><br>
-		Under Review
+		Preprint
 	</font></b></p>
 	
 	<table width="1000">
@@ -141,18 +139,19 @@
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b><font size="4.5">An Offline Adaptation Framework for Constrained Multi-Objective Reinforcement Learning</font></b><br>
 					<strong>Qian Lin</strong>, Zongkai Liu, Danying Mo, Chao Yu<br>
+					[<a href="https://arxiv.org/abs/2409.09958">Paper</a>]&nbsp;
 					<br>
 			</p></td></tr>
 		</tbody>
 
 		<!--bid-->
-		<tbody><tr>
+		<!-- <tbody><tr>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b><font size="4.5">Hierarchical Multi-agent Meta-Reinforcement Learning for Cross-channel Bidding</font></b><br>
 					Shenghong He, Chao Yu, <strong>Qian Lin</strong>, Shangqin Mao, Bo Tang, Qianlong Xie, Xingxing Wang<br>
 				<br>
 			</p></td></tr>
-		</tbody>
+		</tbody> -->
 
 	</table>
 
@@ -160,10 +159,11 @@
 		Selected Awards</font></b></p>
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
 			<ul>
+				<li>Chinese National Scholarship, 2024.</li>
 				<li>Xiaomi Scholarship, 2023.</li>
 				<li>First Prize of Sun Yat-sen University Graduate Scholarship and Grant, 2022-2024.</li>
 				<li>1st place at the RoboMaster Sim2Real Challenge (2022 IEEE Conference on Games), 2022.</li>
-				<li>Outstanding Student Scholarship of Sun Yat-sen University, 2019-2021</li>
+				<li>Outstanding Student Scholarship of Sun Yat-sen University, 2019-2021.</li>
 			</ul>
 		</font>
 
