--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 			<tr>
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">			
-				I am a second-year Master's student in Sun Yat-sen University, China, supervised by Professor Chao Yu. 
+				I am a second-year Master's student from the School of Computer Science and Engineering at Sun Yat-sen University, China, supervised by Professor Chao Yu. 
 				I mainly focus on reinforcement learning (RL), especially under various settings, including offline, safe, and multi-objective scenarios. 
 				I hope to advance the real-world applications of RL by enhancing agents'generalization across diverse tasks and environments, while prioritizing their safety and robustness.
-				Prior to that, I received my Bachelor's degree in computer science from the same university. 
+				<!-- Prior to that, I received my Bachelor's degree in computer science from the same university.  -->
 				<br><br>
 				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.				
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
@@ -74,19 +74,52 @@
 	</table>
 
 	<p><b><font face="Times New Roman" size="5"><br>
+		News
+	</font></b></p>
+		<font face="Arial" style="font-size: 12pt; line-height: 2;">
+		<ul>
+			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sept, 2024] Neural Assets, work done during my Student Researcher @ Google DeepMind, is accepted by <b>NeurIPS 2024</b> as a Spotlight Presentation!</li>
+			<li><b style="color: green; background-color: #ffff42">NEW</b> [Jun, 2024] I start my internship at Snap working with Dr. <a href="https://aliaksandrsiarohin.github.io/aliaksandr-siarohin-website/">Aliaksandr Siarohin</a>!</li> -->
+			<li> [Sept, 2024] One papers <a href="https://arxiv.org/abs/2409.09958">PDOA</a> accepted by <b>NIPS 2024</b></li><br>
+			<li> [Jan, 2024] One papers <a href="https://arxiv.org/abs/2401.14758">CAL</a> accepted by <b>ICLR 2024</b></li><br>
+			<li> [Dec, 2023] One papers <a href="https://arxiv.org/abs/2401.02244">PRMORL</a> accepted by <b>AAMAS 2024</b></li><br>
+			<li> [Apr, 2023] One papers <a href="https://proceedings.mlr.press/v202/lin23h/lin23h.pdf">TREBI</a> accepted by <b>ICML 2023</b></li><br>
+			<!-- <li> [Sept, 2022] Breaking Bad is accepted by <b>NeurIPS 2022 Datasets Track</b> as a Featured Presentation!</li> -->
+			<!-- <li> [July, 2021] One paper accepted by <b>ICCV 2021</b>!</li> -->
+			<!-- <li> [June, 2021] I graduated with first-class honor from Tsinghua University.</li> -->
+			<!-- <li> [Spring, 2021] Wonderful internship at <a href="https://www.sensetime.com/en">SenseTime</a> developing <a href="https://github.com/open-mmlab/mmdetection3d">MMDetection3D</a>: <a href="https://github.com/open-mmlab/mmdetection3d"><img alt="GitHub stars" style="vertical-align:middle" src="https://img.shields.io/github/stars/open-mmlab/mmdetection3d?style=social"></a> mentored by Dr. <a href="http://chenkai.site/">Kai Chen</a> and <a href="http://zhangwenwei.cn/">Wenwei Zhang</a>.</li> -->
+			<!-- <li> [Jan, 2021] One paper accepted by <b>T-PAMI</b>!</li> -->
+			<!-- <li> [Dec, 2020] Invited talk about my research on 3D point cloud adversarial attack and defense in Prof. <a href="http://www.cs.toronto.edu/~urtasun/">Raquel Urtasun</a>'s group.</li> -->
+			<!-- <li> [Dec, 2020] I am awarded the <b>SenseTime Scholarship 2020</b>.</li> -->
+			<!-- <li> [Mar, 2020] One paper accepted by <b>CVPR 2020</b>!</li> -->
+		</ul>
+		</font>
+
+	<p><b><font face="Times New Roman" size="5"><br>
 		Publications
 	</font></b></p>
 	
 
 	<table width="1000">
 	
+		<!--PODA-->
+		<tbody><tr>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b><font size="4.5">An Offline Adaptation Framework for Constrained Multi-Objective Reinforcement Learning</font></b><br>
+					<strong>Qian Lin</strong>, Zongkai Liu, Danying Mo, Chao Yu<br>
+					<em>NIPS 2024</em>.<br>
+					[<a href="https://arxiv.org/abs/2409.09958">Paper</a>]&nbsp;
+					<br><br>
+			</p></td></tr>
+		</tbody>
+
 		<!--CAL-->
 		<tbody><tr>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b><font size="4.5">Off-Policy Primal-Dual Safe Reinforcement Learning</font></b><br>
 					Zifan Wu, Bo Tang*, <strong>Qian Lin*</strong>, Chao Yu, Shangqin Mao, Qianlong Xie, Xingxing Wang, Dong Wang<br>
 				<em>ICLR 2024</em>.<br>
-				[<a href="https://arxiv.org/pdf/2401.14758.pdf">Paper</a>]&nbsp;
+				[<a href="https://arxiv.org/abs/2401.14758">Paper</a>]&nbsp;
 				[<a href="https://github.com/ZifanWu/CAL">Code</a>]
 				<br><br>
 			</p></td></tr>
@@ -115,6 +148,8 @@
 			<br><br>
 			</p></td></tr>
 		</tbody>
+
+		
         
         <!-- sim2real_survey -->
 		<!--
@@ -134,15 +169,7 @@
 	
 	<table width="1000">
 	
-		<!--PODA-->
-		<tbody><tr>
-			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
-				<b><font size="4.5">An Offline Adaptation Framework for Constrained Multi-Objective Reinforcement Learning</font></b><br>
-					<strong>Qian Lin</strong>, Zongkai Liu, Danying Mo, Chao Yu<br>
-					[<a href="https://arxiv.org/abs/2409.09958">Paper</a>]&nbsp;
-					<br>
-			</p></td></tr>
-		</tbody>
+		
 
 		<!--bid-->
 		<!-- <tbody><tr>
