--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	</font></b></p>
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
 		<ul>
-			<li> [Sept, 2024] One papers <a href="https://arxiv.org/abs/2409.09958">PDOA</a> accepted by <b>NIPS 2024</b></li><br>
+			<li> [Sept, 2024] One papers <a href="https://arxiv.org/abs/2409.09958">PDOA</a> accepted by <b>NeurIPS 2024</b></li><br>
 			<li> [Jan, 2024] One papers <a href="https://arxiv.org/abs/2401.14758">CAL</a> accepted by <b>ICLR 2024</b></li><br>
 			<li> [Dec, 2023] One papers <a href="https://arxiv.org/abs/2401.02244">PRMORL</a> accepted by <b>AAMAS 2024</b></li><br>
 			<li> [Apr, 2023] One papers <a href="https://proceedings.mlr.press/v202/lin23h/lin23h.pdf">TREBI</a> accepted by <b>ICML 2023</b></li><br>
@@ -97,7 +97,7 @@
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b><font size="4.5">An Offline Adaptation Framework for Constrained Multi-Objective Reinforcement Learning</font></b><br>
 					<strong>Qian Lin</strong>, Zongkai Liu, Danying Mo, Chao Yu<br>
-					<em>NIPS 2024</em>.<br>
+					<em>NeurIPS 2024</em>.<br>
 					[<a href="https://arxiv.org/abs/2409.09958">Paper</a>]&nbsp;
 					<br><br>
 			</p></td></tr>
