--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">			
 				I am a third-year Master's student from the School of Computer Science and Engineering at Sun Yat-sen University, China, supervised by Professor Chao Yu. 
 				I mainly focus on reinforcement learning (RL), especially under various settings, including offline, safe, and multi-objective scenarios. 
-				I hope to advance the real-world applications of RL by enhancing agents'generalization across diverse tasks and environments, while prioritizing their safety and robustness.
+				My goal is to advance the real-world applications of RL by enhancing agents'generalization across diverse tasks and environments, while prioritizing their safety and robustness.
 				<!-- Prior to that, I received my Bachelor's degree in computer science from the same university.  -->
 				<br><br>
 				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.				
