--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">			
 				I am a third-year Master's student from the School of Computer Science and Engineering at Sun Yat-sen University, China, supervised by Professor Chao Yu. 
-				I mainly focus on reinforcement learning (RL), especially under various settings, including offline, safe, and multi-objective scenarios. 
-				My goal is to advance the real-world applications of RL by enhancing agents'generalization across diverse tasks and environments, while prioritizing their safety and robustness.
+				I mainly focus on reinforcement learning (RL), especially safe, multi-objective, and offline RL. 
+				<br><br>
+				Specifically, my research interests include 1) studying behavior safety and diversity of RL agents, 2) advancing RL with various sources of data like offline datasets and human feedback, and 3) exploring the interactions between different RL subfields as well as cutting-edge AI technologies.
 				<!-- Prior to that, I received my Bachelor's degree in computer science from the same university.  -->
 				<br><br>
-				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.				
+				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.					
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
 				</td>
 			</tr>
@@ -191,6 +192,8 @@
 				<tr>
 					<td style="border-style: none; border-width: medium;">
 						<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 11pt;">
+						The pronunciation of my name, Qian Lin, is 'chee-an leen'.
+						<br><br>
 						I like watching movies, playing Chinese chess and table tennis.
 						<br><br>
 						I have been a member of the Duxing Volunteer Service Team since 2019, where I participate in animal rescue activities to assist stray cats and dogs.
