--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	</font></b></p>
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
 		<ul>
-			<li> [Dec, 2024] One papers InSPO accepted by <b>AAAI 2025</b></li><br>
+			<li> [Dec, 2024] One papers <a href="https://arxiv.org/abs/2412.07639">InSPO</a> accepted by <b>AAAI 2025</b></li><br>
 			<li> [Sept, 2024] One papers <a href="https://arxiv.org/abs/2409.09958">PDOA</a> accepted by <b>NeurIPS 2024</b></li><br>
 			<li> [Jan, 2024] One papers <a href="https://arxiv.org/abs/2401.14758">CAL</a> accepted by <b>ICLR 2024</b></li><br>
 			<li> [Dec, 2023] One papers <a href="https://arxiv.org/abs/2401.02244">PRMORL</a> accepted by <b>AAMAS 2024</b></li><br>
@@ -100,7 +100,7 @@
 				<b><font size="4.5">Offline Multi-Agent Reinforcement Learning via In-Sample Sequential Policy Optimization</font></b><br>
 					Zongkai Liu, <strong>Qian Lin</strong>, Chao Yu, Xiawei WU, Yile Liang, Donghui Li, Xuetao Ding<br>
 					<em>AAAI 2025</em>.<br>
-					<!--[<a href="https://arxiv.org/abs/2409.09958">Paper</a>]&nbsp; -->
+					[<a href="https://arxiv.org/abs/2412.07639">Paper</a>]&nbsp; 
 					<br><br>
 			</p></td></tr>
 		</tbody>
