--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<p><font face="Arial" style="font-size: 12pt;">&nbsp; MSc Student</font></p>
 					<p><font face="Arial" style="font-size: 12pt;">&nbsp; Sun Yat-sen University</font></p>
 					<p><font face="Arial" style="font-size: 12pt;">&nbsp; Email: linq67 [at] mail2.sysu.edu.cn</font></p>
-					&nbsp; <a href="files/CV.pdf">CV</a> &bull; <a href="https://scholar.google.com/citations?hl=en&user=qgen0EkAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/qianlin04">GitHub</a>
+					&nbsp; <a href="CV.pdf">CV</a> &bull; <a href="https://scholar.google.com/citations?hl=en&user=qgen0EkAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/qianlin04">GitHub</a>
 					
 				</td>
 			</tr>
