--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				I am a third-year Master's student from the School of Computer Science and Engineering at Sun Yat-sen University, China, supervised by Professor Chao Yu. 
 				I mainly focus on reinforcement learning (RL), especially safe, multi-objective, and offline RL. 
 				<br><br>
-				Specifically, I like to explore 1) behavior safety and diversity of RL agents, 2) RL with various sources of data like offline datasets and human feedback, and 3) the interactions between different RL subfields as well as cutting-edge AI technologies.
+				Specifically, I like to explore 1) the safety and diversity of RL agents' behaviors, 2) RL with various sources of data like offline datasets and human feedback, and 3) the interactions between different RL subfields as well as cutting-edge AI technologies.
 				<!-- Prior to that, I received my Bachelor's degree in computer science from the same university.  -->
 				<br><br>
 				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.					
