--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 		<tbody>
 			<tr>
 				<td width="400">
-					<p align="center"><font face="Arial"><img border="0" src="imgs/me.png" height="224"></font></p>
+					<p align="center"><font face="Arial"><img border="0" src="imgs/me.jpg" height="224"></font></p>
 				</td>
 				<td>
 					<font face="Arial" size="6"><b>&nbsp;Qian Lin <span lang="zh-cn">(林谦)</span></b></font>
-					<p><font face="Arial" style="font-size: 12pt;">&nbsp; MSc Student</font></p>
-					<p><font face="Arial" style="font-size: 12pt;">&nbsp; Sun Yat-sen University</font></p>
-					<p><font face="Arial" style="font-size: 12pt;">&nbsp; Email: linq67 [at] mail2.sysu.edu.cn</font></p>
+					<p><font face="Arial" style="font-size: 12pt;">&nbsp; Phd Student</font></p>
+					<p><font face="Arial" style="font-size: 12pt;">&nbsp; University of Utah</font></p>
+					<p><font face="Arial" style="font-size: 12pt;">&nbsp; Email:  qian.lin [at] utah.edu</font></p>
 					&nbsp; <a href="CV.pdf">CV</a> &bull; <a href="https://scholar.google.com/citations?hl=en&user=qgen0EkAAAAJ">Google Scholar</a> &bull; <a href="https://github.com/qianlin04">GitHub</a>
 					
 				</td>
@@ -61,20 +61,14 @@
 			<tr>
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">			
-				I am a third-year Master's student from the School of Computer Science and Engineering at Sun Yat-sen University, China, supervised by Professor Chao Yu. 
-				I mainly focus on reinforcement learning (RL), especially safe, multi-objective, and offline RL. 
-				<br><br>
-				Specifically, I like to explore 1) the safety and diversity of RL agents' behaviors, 2) RL with various sources of data like offline datasets and human feedback, and 3) the interactions between different RL subfields as well as cutting-edge AI technologies.
-				<!-- Prior to that, I received my Bachelor's degree in computer science from the same university.  -->
-				<br><br>
-				I am expected to graduate in June 2025, and I intend to apply for a PhD program in the fall of 2025.					
+				I am currently a first-year Ph.D. student in Computer Science at the Kahlert School of Computing, advised by Dr. <a href="https://users.cs.utah.edu/~dsbrown/index.html">Daniel S. Brown</a>. Previously, I earned my master’s degree from Sun Yat-sen University in China. My research interests lie in reinforcement learning (RL), especially in 1) making RL agents safer and more diverse and 2) learning from different kinds of data including offline datasets and human feedback. 
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
 				</td>
 			</tr>
 		</tbody>
 	</table>
 
-	<p><b><font face="Times New Roman" size="5"><br>
+	<!-- <p><b><font face="Times New Roman" size="5"><br>
 		News
 	</font></b></p>
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
@@ -85,7 +79,7 @@
 			<li> [Dec, 2023] One papers <a href="https://arxiv.org/abs/2401.02244">PRMORL</a> accepted by <b>AAMAS 2024</b></li><br>
 			<li> [Apr, 2023] One papers <a href="https://proceedings.mlr.press/v202/lin23h/lin23h.pdf">TREBI</a> accepted by <b>ICML 2023</b></li><br>
 		</ul>
-		</font>
+		</font> -->
 
 	<p><b><font face="Times New Roman" size="5"><br>
 		Publications
@@ -192,8 +186,7 @@
 				<li>Chinese National Scholarship, 2024.</li>
 				<li>Xiaomi Scholarship, 2023.</li>
 				<li>First Prize of Sun Yat-sen University Graduate Scholarship and Grant, 2022-2024.</li>
-				<li>1st place at the RoboMaster Sim2Real Challenge (2022 IEEE Conference on Games), 2022.</li>
-				<li>Outstanding Student Scholarship of Sun Yat-sen University, 2019-2021.</li>
+				<li>Grant Prize at the RoboMaster Sim2Real Challenge (2022 IEEE Conference on Games), 2022.</li>
 			</ul>
 		</font>
 
@@ -206,7 +199,7 @@
 						<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 11pt;">
 						The pronunciation of my name, Qian Lin, is 'chee-an leen'.
 						<br><br>
-						I like watching movies, playing Chinese chess and table tennis.
+						I like electric guitar, movies, Chinese chess and table tennis.
 						<br><br>
 						I have been a member of the Duxing Volunteer Service Team since 2019, where I participate in animal rescue activities to assist stray cats and dogs.
 					</font></p><font face="Arial" style="font-size: 11pt;"></font>
@@ -221,6 +214,6 @@
 	<br>
 
 	<hr>
-	<font style="font-size:10">Qian Lin <i>Last updated: Dec.17, 2023</i></font>
+	<font style="font-size:10">Qian Lin <i>Last updated: Sept, 2025</i></font>
 
 </div></body>
